--- a/index.html
+++ b/index.html
@@ -33,22 +33,21 @@
             </th>
           </tr>
         </table>
-         <h4>Enter temperature in celsius:</h4>
 
 		<table>
 			<tr>
 				<td>
-					<h3>Enter temperature:</h3>
-					<form action="javascript:makeRandomNumber()">						
-						<label for="guess">Degrees:</label>
-						<input type="number" step="1" id="guess" placeholder="Enter temprature"><br><br>
+					<h3>Enter temperature in celsius:</h3>
+					<form action="javascript:tempHotOrCold()">						
+						<label for="guess">Temperature:</label>
+						<input type="number" step="any" id="guess" placeholder="Enter temprature"><br><br>
 						<input type="submit" value="Display results">
 					</form>
 				</td>
 			</tr>
 		</table>
           <div id="answers">
-            <div id="temprature"></div>
+            <div id="temperature"></div>
           </div>
         </p>
       </main>
