--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h3>Enter temperature in celsius:</h3>
 					<form action="javascript:tempHotOrCold()">						
 						<label for="guess">Temperature:</label>
-						<input type="number" step="any" id="guess" placeholder="Enter temprature"><br><br>
+						<input type="number" step="any" id="guess" placeholder="Enter temperature"><br><br>
 						<input type="submit" value="Display results">
 					</form>
 				</td>
